--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="loading">Loading…</string>
     <string name="car_image">car image</string>
     <string name="buy">Buy</string>
+    <string name="no_car_details_fetched">No car details fetched</string>
+    <string name="no_internet_connection">No internet connection</string>
 
 </resources>
