--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,9 @@
     <string name="buy">Buy</string>
     <string name="no_car_details_fetched">No car details fetched</string>
     <string name="no_internet_connection">No internet connection</string>
-
+    <string-array name="sort_array">
+        <item>Sort List</item>
+        <item>Sort by Name</item>
+        <item>Sort by Availability</item>
+    </string-array>
 </resources>
